--- a/app/views/geos/_map_modal.html.haml
+++ b/app/views/geos/_map_modal.html.haml
@@ -1,5 +1,5 @@
 -# requires local vars: modal_id, src
-%a.button{href: '#', data: {'reveal-id' => 'ensMap', reveal: true}}
+%a.button{href: '#', data: {'reveal-id' => 'ensMap', reveal: true, no_turbolink: true}}
   = link_text
 .reveal-modal.xlarge{id: 'ensMap',
   data: {reveal: true}, style: 'height: 100%;'}
